--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 		<!--代码分割线-->
-		<footer>友情提示：为了防止失联，建议按住Ctrl+D收藏保存。
+		<footer>友情提示：为了防止失联，建议收藏保存。
 			<br></br>
 			<b>©bin1. 2023-2024 . All Rights Reserved</b></br>
 		</footer>
