--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						Android破解软件、Windows破解软件、Windows密钥、Office密钥、软件序列号、学习教程课程。
 					</h4>
 					<br>
-					<h5>—— 赞助已经关闭，优质资源赞助者优享！</h5>
+					<h5>📢 —— 赞助已经关闭，优质资源赞助者优享！</h5>
 					</p>
 				</div>
 				<!--代码分割线-->
