--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 				<div class="links">
 					<ul>
 						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank">QQ频道</a></li>
-						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ群</a></li>
-						<li><a href="mailto:3295532395@qq.com" target="_blank">Email建议</a></li>
+						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ交流群</a></li>
+						<li><a href="mailto:3295532395@qq.com" target="_blank">E-mail建议</a></li>
 						<li><a href="KMS/index.html" target="_blank">KMS激活</a></li>
 						<li><a onclick="var copyText='https://bin1site1.github.io/tvbox/OS.json';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('已复制单仓链接到剪贴板');">TVBOX单仓</a></li>
 						<li><a onclick="var copyText='https://bin1site1.github.io/tvbox/多仓.json';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('已复制多仓链接到剪贴板');">TVBOX多仓</a></li>
