--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<p>
 						<a style="color: rgb(250, 42, 42);"
 							href="https://ym.ksjhaoka.com/?s=0tToasKQ98111">
-								🚀 低价流量卡，正规不虚标，官方可查！ 🚀
+								🚀 低价流量卡，正规不虚标，官方可查！
 						</a><br>
 					<h5>👆👆免费办理、包邮到家！👆👆</h5>
 					</p>
