--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ交流群</a></li>
 						<li><a href="mailto:3295532395@qq.com" target="_blank">E-mail建议</a></li>
 						<li><a href="KMS/index.html" target="_blank">KMS激活</a></li>
-						<li><a onclick="var copyText='https://bin1site1.github.io/tvbox/OS.json';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('已复制单仓链接到剪贴板');">TVBOX单仓</a></li>
-						<li><a onclick="var copyText='https://bin1site1.github.io/tvbox/多仓.json';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('已复制多仓链接到剪贴板');">TVBOX多仓</a></li>
+						<li><a onclick="var copyText='赞助成员专属，暂时不对外开放！';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('赞助成员专属，暂时不对外开放！');">TVBOX单仓</a></li>
+						<li><a onclick="var copyText='赞助成员专属，暂时不对外开放！';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('赞助成员专属，暂时不对外开放！');">TVBOX多仓</a></li>
 					</ul>
 				</div>
 				<!--代码分割线-->
