--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 			<div class="title">
 				<h2>@bin1</h2>
 				<p>世味年来薄似纱，谁令骑马客京华？
-					<br>
+					<br></br>
+					<canvas class="navigation-wrapper iUp up" id="canvas" style="width:50%;padding-top:0px;" width="820"
+						height="250"></canvas>
+					<script src="./clock.js"></script>
 					<br>
 					<b>Android | Windows | Other</b>
 				</p>
@@ -51,16 +54,19 @@
 						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ交流群</a></li>
 						<li><a href="mailto:3295532395@qq.com" target="_blank">E-mail建议</a></li>
 						<li><a href="KMS/index.html" target="_blank">KMS激活</a></li>
-						<li><a onclick="var copyText='赞助成员专属，暂时不对外开放！';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('赞助成员专属，暂时不对外开放！');">TVBOX单仓</a></li>
-						<li><a onclick="var copyText='赞助成员专属，暂时不对外开放！';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('赞助成员专属，暂时不对外开放！');">TVBOX多仓</a></li>
+						<li><a
+								onclick="var copyText='赞助成员专属，暂时不对外开放！';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('赞助成员专属，暂时不对外开放！');">TVBOX单仓</a>
+						</li>
+						<li><a
+								onclick="var copyText='赞助成员专属，暂时不对外开放！';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('赞助成员专属，暂时不对外开放！');">TVBOX多仓</a>
+						</li>
 					</ul>
 				</div>
 				<!--代码分割线-->
 				<div class="tips">
 					<p>
-						<a style="color: rgb(250, 42, 42);"
-							href="https://ym.ksjhaoka.com/?s=0tToasKQ98111">
-								🚀 低价流量卡，正规不虚标，官方可查！
+						<a style="color: rgb(250, 42, 42);" href="https://ym.ksjhaoka.com/?s=0tToasKQ98111">
+							🚀 低价流量卡，正规不虚标，官方可查！
 						</a><br>
 					<h5>👆👆免费办理、包邮到家！👆👆</h5>
 					</p>
