--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 		<!--代码分割线-->
 		<footer>友情提示：为了防止失联，建议收藏保存。
 			<br></br>
-			<b>©bin1. 2023-2024 . All Rights Reserved</b></br>
+			<b>©bin1. 2023
+				<script>document.write(' - ' + (new Date()).getFullYear())</script>. All Rights Reserved
+			</b></br>
 		</footer>
 		<!--代码分割线-->
 	</div>
