--- a/index.html
+++ b/index.html
@@ -52,31 +52,22 @@
 					<ul>
 						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank">QQ频道</a></li>
 						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ交流群</a></li>
-						<li><a href="mailto:3295532395@qq.com" target="_blank">E-mail建议</a></li>
-						<li><a href="KMS/index.html" target="_blank">KMS激活</a></li>
-						<li><a
-								onclick="var copyText='赞助成员专属，暂时不对外开放！';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('赞助成员专属，暂时不对外开放！');">TVBOX单仓</a>
-						</li>
-						<li><a
-								onclick="var copyText='赞助成员专属，暂时不对外开放！';var dummyElement=document.createElement('textarea');dummyElement.value=copyText;document.body.appendChild(dummyElement);dummyElement.select();document.execCommand('copy');document.body.removeChild(dummyElement);alert('赞助成员专属，暂时不对外开放！');">TVBOX多仓</a>
-						</li>
+						<li><a href="mailto:3295532395@qq.com" target="_blank">E-mail联系</a></li>
 					</ul>
 				</div>
 				<!--代码分割线-->
 				<div class="tips">
 					<p>
-						<a style="color: rgb(250, 42, 42);" href="https://ym.ksjhaoka.com/?s=0tToasKQ98111">
-							🚀 低价流量卡，正规不虚标，官方可查！
-						</a><br>
-					<h5>👆👆免费办理、包邮到家！👆👆</h5>
+						<a style="color: rgb(250, 42, 42);" href="KMS/index.html">
+							🚀 一键KMS激活Windows与Office
+						</a>
 					</p>
 					<p>
 						<b style="color: rgb(0, 153, 255);">
 							- 高级赞助 -
 						</b>
-						<br>
 					<h4>
-						Android破解软件、Windows破解软件、Windows密钥、Office密钥、软件序列号、学习教程课程。
+						Android破解软件 | Windows破解软件 | Windows密钥 | Office密钥 | 软件注册码 | 网课教程学习课程 | 其他技术资料
 					</h4>
 					<br>
 					<h5>📢 —— 赞助已经关闭，优质资源赞助者优享！</h5>
