--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 							- 高级赞助 -
 						</b>
 					<h4>
-						Android破解软件 | Windows破解软件 | Windows密钥 | Office密钥 | 软件注册码 | 网课教程学习课程 | 其他技术资料
+						Android破解软件 | Windows破解软件 | Windows密钥 | Office密钥
+						<p></p>
+						软件注册码 | 网课教程学习课程 | 其他技术资料
 					</h4>
 					<br>
 					<h5>📢 —— 赞助已经关闭，优质资源赞助者优享！</h5>
