--- a/index.html
+++ b/index.html
@@ -56,24 +56,39 @@
 					</ul>
 				</div>
 				<!--代码分割线-->
+				<div class="bin1site">
+					<ul>
+						<li><a href="KMS/index.html" target="_blank">
+								🚀 一键KMS激活Windows与Office
+							</a></li>
+						<li>
+							<a href="#"
+								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });">
+								🪐tvbox单仓视频订阅链接
+							</a>
+						</li>
+						<li>
+							<a href="#"
+								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });">
+								🪐tvbox多仓视频订阅链接
+							</a>
+						</li>
+					</ul>
+				</div>
+				<!--代码分割线-->
 				<div class="tips">
-					<p>
-						<a style="color: rgb(250, 42, 42);" href="KMS/index.html">
-							🚀 一键KMS激活Windows与Office
-						</a>
-					</p>
-					<p>
-						<b style="color: rgb(0, 153, 255);">
-							- 高级赞助 -
-						</b>
-					<h4>
+					<premium>
+						- 高级赞助 -
+					</premium>
+					<p></p>
+					<h4 class="bordered-box">
 						Android破解软件 | Windows破解软件 | Windows密钥 | Office密钥
 						<p></p>
 						软件注册码 | 网课教程学习课程 | 其他技术资料
+						<p></p>
+						📢 —— 赞助已经关闭，优质资源赞助者优享！
 					</h4>
-					<br>
-					<h5>📢 —— 赞助已经关闭，优质资源赞助者优享！</h5>
-					</p>
+					<p></p>
 				</div>
 				<!--代码分割线-->
 			</div>
