--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 					</premium>
 					<p></p>
 					<h4 class="bordered-box">
-						Android破解软件 | Windows破解软件 | Windows密钥 | Office密钥
+						Android破解软件 | Windows破解软件 | Windows密钥
 						<p></p>
-						软件注册码 | 网课教程学习课程 | 其他技术资料
+						Office密钥 | 软件注册码 | 网课教程学习课程
 						<p></p>
 						📢 —— 赞助已经关闭，优质资源赞助者优享！
 					</h4>
