--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>🪪@bin1·皮燕子·导航</title>
-	<link rel="stylesheet" href="styles.css">
+	<meta charset="utf-8"> <!-- 设置字符编码为UTF-8 -->
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- 设置视口适应设备宽度 -->
+	<title>🪪@bin1·皮燕子·导航</title> <!-- 设置页面标题 -->
+	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
 </head>
 
 <body>
