--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					</ul>
 				</div>
 				<!--代码分割线-->
-				<div class="bin1site">
+				<div class="kms-tvbox">
 					<ul>
 						<li><a href="KMS/index.html" target="_blank">
 								🚀 一键KMS激活Windows与Office
