--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="image"><img src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png" alt="bin1皮燕子导航"
 					onclick="location.reload();"></div>
 			<div class="title">
-				<h2>@bin1</h2>
+				<h2><b>@bin1</b></h2>
 				<p>世味年来薄似纱，谁令骑马客京华？
 					<br></br>
 					<canvas class="navigation-wrapper iUp up" id="canvas" style="width:50%;padding-top:0px;" width="820"
