--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<br></br>
 					<canvas class="navigation-wrapper iUp up" id="canvas" style="width:50%;padding-top:0px;" width="820"
 						height="250"></canvas>
+					<!-- 引入时钟脚本文件 -->
 					<script src="./clock.js"></script>
 					<br></br>
 					<b>Android | Windows | Other</b>
@@ -50,9 +51,9 @@
 			<div class="release-main">
 				<div class="links">
 					<ul>
-						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank">QQ频道</a></li>
-						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ交流群</a></li>
-						<li><a href="mailto:3295532395@qq.com" target="_blank">E-mail联系</a></li>
+						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank">QQ频道</a></li> <!-- 链接到QQ频道 -->
+						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ交流群</a></li> <!-- 链接到QQ交流群 -->
+						<li><a href="mailto:3295532395@qq.com" target="_blank">E-mail联系</a></li> <!-- 链接到电子邮件联系 -->
 					</ul>
 				</div>
 				<!--代码分割线-->
@@ -61,18 +62,21 @@
 						<li><a href="KMS/index.html" target="_blank">
 								🚀 一键KMS激活Windows与Office
 							</a></li>
+						<!-- 添加注释：链接到KMS激活页面，用于一键激活Windows和Office -->
 						<li>
 							<a href="#"
 								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });">
 								🪐tvbox单仓视频订阅链接
 							</a>
 						</li>
+						<!-- 添加注释：点击复制并提示赞助成员专属信息，适用于tvbox单仓视频订阅链接 -->
 						<li>
 							<a href="#"
 								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });">
 								🪐tvbox多仓视频订阅链接
 							</a>
 						</li>
+						<!-- 添加注释：点击复制并提示赞助成员专属信息，适用于tvbox多仓视频订阅链接 -->
 					</ul>
 				</div>
 				<!--代码分割线-->
