--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 		</div>
 		<!--代码分割线-->
 		<footer>友情提示：为了防止失联，建议收藏保存。
-			<br></br>
+			<br></br> <!-- 插入换行符 -->
 			<b>©bin1. 2023
 				<script>document.write(' - ' + (new Date()).getFullYear())</script>. All Rights Reserved
-			</b></br>
-		</footer>
+			</b></br> <!-- 插入换行符并加粗文本 -->
+		</footer> <!-- 定义页脚部分 -->
 		<!--代码分割线-->
 	</div>
 </body>
