--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<div class="release">
 		<div class="release-body">
+			<!-- 定义一个包含图片的div元素 -->
 			<div class="image"><img src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png" alt="bin1皮燕子导航"
 					onclick="location.reload();"></div>
 			<div class="title">
