--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<div class="release">
 		<div class="release-body">
 			<!-- 定义一个包含图片的div元素 -->
-			<div class="image"><img src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png" alt="bin1皮燕子导航"
-					onclick="location.reload();"></div>
+			<div class="image"><img class="hover-zoom" src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png"
+					alt="bin1皮燕子导航" onclick="location.reload();"></div>
 			<div class="title">
 				<h2><b>@bin1</b></h2>
 				<p>世味年来薄似纱，谁令骑马客京华？
@@ -52,28 +52,33 @@
 			<div class="release-main">
 				<div class="links">
 					<ul>
-						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank">QQ频道</a></li> <!-- 链接到QQ频道 -->
-						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ交流群</a></li> <!-- 链接到QQ交流群 -->
-						<li><a href="mailto:3295532395@qq.com" target="_blank">E-mail联系</a></li> <!-- 链接到电子邮件联系 -->
+						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">QQ频道</a></li>
+						<!-- 链接到QQ频道 -->
+						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank" class="hover-zoom">QQ交流群</a></li>
+						<!-- 链接到QQ交流群 -->
+						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">E-mail联系</a></li>
+						<!-- 链接到电子邮件联系 -->
 					</ul>
 				</div>
 				<!--代码分割线-->
 				<div class="kms-tvbox">
 					<ul>
-						<li><a href="KMS/index.html" target="_blank">
+						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">
 								🚀 一键KMS激活Windows与Office
 							</a></li>
 						<!-- 添加注释：链接到KMS激活页面，用于一键激活Windows和Office -->
 						<li>
 							<a href="#"
-								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });">
+								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });"
+								class="hover-zoom">
 								🪐tvbox单仓视频订阅链接
 							</a>
 						</li>
 						<!-- 添加注释：点击复制并提示赞助成员专属信息，适用于tvbox单仓视频订阅链接 -->
 						<li>
 							<a href="#"
-								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });">
+								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });"
+								class="hover-zoom">
 								🪐tvbox多仓视频订阅链接
 							</a>
 						</li>
