--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<canvas class="navigation-wrapper iUp up" id="canvas" style="width:50%;padding-top:0px;" width="820"
 						height="250"></canvas>
 					<!-- 引入时钟脚本文件 -->
-					<script src="./clock.js"></script>
+					<script src="clock.js"></script>
 					<br></br>
 					<b>Android | Windows | Other</b>
 				</p>
