--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				<span id="sitetime"></span> <!-- 运行时间 -->
 				<p></p>
 				<b></br>
-					©bin1. 2023
+					Copyright ©bin1. 2023
 					<script>document.write(' - ' + (new Date()).getFullYear())</script>. All Rights Reserved
 		</footer> <!-- 定义页脚部分 -->
 		<!--代码分割线-->
