--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>🪪bin1site·导航</title> <!-- 设置页面标题 -->
 	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
 	<script src="js/Sitetime.js"></script><!-- 运行时间 -->
-	<script src="js/toggleText.js"></script>
+	<script src="js/toggleText.js"></script><!-- 每次刷新随机文字 -->
 </head>
 
 <body>
