--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					alt="bin1皮燕子导航" onclick="location.reload();"></div>
 			<div class="title">
 				<h2 id="toggleText"></h2>
-				<p>世味年来薄似纱，谁令骑马客京华？
+				<p><shiju>世味年来薄似纱，谁令骑马客京华？</shiju>
 					<br></br>
 					<canvas id="canvas" style="width:50%;padding-top:0px;" width="820" height="250"></canvas>
 					<!-- 引入时钟脚本文件 -->
