--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
 	<script src="js/Sitetime.js"></script><!-- 运行时间 -->
 	<script src="js/toggleText.js"></script><!-- 每次刷新随机文字 -->
-	<script type="text/javascript" src="js/sakura-less.js"></script><!-- 花瓣飘落效果 -->
+	<script src="js/sakura-less.js"></script><!-- 花瓣飘落效果 -->
 </head>
 
 <body>
