--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="release-body">
 			<!-- 定义一个包含图片的div元素 -->
 			<div class="image"><img class="hover-zoom" src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png"
-					alt="bin1皮燕子导航" onclick="location.reload();"></div>
+					onclick="location.reload();"></div>
 			<div class="title">
 				<h2 id="toggleText"></h2>
 				<p>
