--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>🪪bin1site·导航</title> <!-- 设置页面标题 -->
 	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
 	<script src="js/Sitetime.js"></script><!-- 运行时间 -->
-	<script src="js/toggleText.js"></script><!-- 每次刷新随机文字 -->
+	<script src="js/toggleText.js"></script><!-- 3秒切换标题文字 -->
 	<script src="js/sakura-less.js"></script><!-- 花瓣飘落效果 -->
 </head>
 
@@ -22,9 +22,8 @@
 				<p>
 					<shiju>世味年来薄似纱，谁令骑马客京华？</shiju>
 					<br></br>
-					<canvas id="canvas" style="width:50%;padding-top:0px;" width="820" height="250"></canvas>
-					<!-- 引入时钟脚本文件 -->
-					<script src="js/clock.js"></script>
+					<canvas id="canvas"></canvas>
+					<script src="js/clock.js"></script><!-- 引入时钟脚本文件 -->
 					<br></br>
 					<b>Android | Windows | Other</b>
 				</p>
