--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<div class="release">
-		<div class="release-body">
+		<div class="body">
 			<!-- 定义一个包含图片的div元素 -->
 			<div class="image"><img class="hover-zoom" src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png"
 					onclick="location.reload();"></div>
@@ -28,30 +28,30 @@
 					<b>Android | Windows | Other</b>
 				</p>
 				<!--代码分割线-->
-				<div class="profile-card-inf">
-					<div class="profile-card-inf__item">
-						<div class="profile-card-inf__title">软件</div>
-						<div class="profile-card-inf__txt">Software</div>
+				<div class="card">
+					<div class="card__item">
+						<div class="card__title">软件</div>
+						<div class="card__txt">Software</div>
 					</div>
 					<!--代码分割线-->
-					<div class="profile-card-inf__item">
-						<div class="profile-card-inf__title">教程</div>
-						<div class="profile-card-inf__txt">Study</div>
+					<div class="card__item">
+						<div class="card__title">教程</div>
+						<div class="card__txt">Study</div>
 					</div>
 					<!--代码分割线-->
-					<div class="profile-card-inf__item">
-						<div class="profile-card-inf__title">密钥</div>
-						<div class="profile-card-inf__txt">Serial-Key</div>
+					<div class="card__item">
+						<div class="card__title">密钥</div>
+						<div class="card__txt">Serial-Key</div>
 					</div>
 					<!--代码分割线-->
-					<div class="profile-card-inf__item">
-						<div class="profile-card-inf__title">技术</div>
-						<div class="profile-card-inf__txt">Technology</div>
+					<div class="card__item">
+						<div class="card__title">技术</div>
+						<div class="card__txt">Technology</div>
 					</div>
 				</div>
 				<!--代码分割线-->
 			</div>
-			<div class="release-main">
+			<div class="main">
 				<div class="links">
 					<ul>
 						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank" class="hover-zoom">QQ频道</a></li>
