--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
 				<!--代码分割线-->
 				<div class="card">
 					<div class="card__item">
-						<div class="card__title">软件</div>
-						<div class="card__txt">Software</div>
+						<div class="card__title">软件</div> <!-- 显示卡片标题，内容为“软件” -->
+						<div class="card__txt">Software</div> <!-- 显示卡片的文本内容，内容为“Software” -->
 					</div>
 					<!--代码分割线-->
 					<div class="card__item">
-						<div class="card__title">教程</div>
-						<div class="card__txt">Study</div>
+						<div class="card__title">教程</div> <!-- 显示卡片标题 -->
+						<div class="card__txt">Study</div> <!-- 显示卡片文本内容 -->
 					</div>
 					<!--代码分割线-->
 					<div class="card__item">
-						<div class="card__title">密钥</div>
-						<div class="card__txt">Serial-Key</div>
+						<div class="card__title">密钥</div> <!-- 显示密钥标题 -->
+						<div class="card__txt">Serial-Key</div> <!-- 显示序列号文本 -->
 					</div>
 					<!--代码分割线-->
 					<div class="card__item">
-						<div class="card__title">技术</div>
-						<div class="card__txt">Technology</div>
+						<div class="card__title">技术</div> <!-- 显示卡片标题 -->
+						<div class="card__txt">Technology</div> <!-- 显示卡片文本 -->
 					</div>
 				</div>
 				<!--代码分割线-->
