--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="kms-tvbox">
 					<ul>
 						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">
-								🚀 一键KMS激活Windows与Office
+								🚀 KMS激活Windows与Office
 							</a></li>
 						<!-- 添加注释：链接到KMS激活页面，用于一键激活Windows和Office -->
 						<li>
