--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="title">
 				<h2 id="toggleText"></h2>
 				<p>
-					<shiju>世味年来薄似纱，谁令骑马客京华？</shiju>
+					<colourful-text>世味年来薄似纱，谁令骑马客京华？</colourful-text>
 					<br></br>
 					<canvas id="canvas"></canvas>
 					<script src="js/clock.js"></script><!-- 引入时钟脚本文件 -->
@@ -67,14 +67,18 @@
 				<div class="kms-tvbox">
 					<ul>
 						<li><a href="KMS/index.html" target="_blank" class="hover-zoom">
-								🚀 KMS激活Windows与Office
+								<colourful-text>
+									🚀 KMS激活Windows与Office
+								</colourful-text>
 							</a></li>
 						<!-- 添加注释：链接到KMS激活页面，用于一键激活Windows和Office -->
 						<li>
 							<a href="#"
 								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });"
 								class="hover-zoom">
-								🪐tvbox单仓视频订阅链接
+								<colourful-text>
+									🪐tvbox单仓视频订阅链接
+								</colourful-text>
 							</a>
 						</li>
 						<!-- 添加注释：点击复制并提示赞助成员专属信息，适用于tvbox单仓视频订阅链接 -->
@@ -82,7 +86,9 @@
 							<a href="#"
 								onclick="navigator.clipboard.writeText('赞助成员专属！').then(() => { alert('赞助成员专属，暂时不对外开放！'); }).catch(err => { console.error('复制失败: ', err); });"
 								class="hover-zoom">
-								🪐tvbox多仓视频订阅链接
+								<colourful-text>
+									🪐tvbox多仓视频订阅链接
+								</colourful-text>
 							</a>
 						</li>
 						<!-- 添加注释：点击复制并提示赞助成员专属信息，适用于tvbox多仓视频订阅链接 -->
