--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<!--代码分割线-->
 				<div class="tips">
 					<premium>
-						- 高级赞助 -
+						- 赞助专享 -
 					</premium>
 					<h4 class="bordered-box">
 						<p></p>
