--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
 					onclick="location.reload();"></div>
 			<div class="title">
 				<h2 id="toggleText"></h2>
+				<biaoqian>
+					#Android
+				</biaoqian>
+				<biaoqian>
+					#HTML
+				</biaoqian>
+				<biaoqian>
+					#CSS
+				</biaoqian>
+				<biaoqian>
+					#JavaScript
+				</biaoqian>
+				<biaoqian>
+					#website
+				</biaoqian>
+				<biaoqian>
+					#Java
+				</biaoqian>
+				<biaoqian>
+					#Smali
+				</biaoqian>
 				<p>
 					<colourful-text>世味年来薄似纱，谁令骑马客京华？</colourful-text>
 					<br></br>
@@ -102,9 +123,9 @@
 				</div>
 				<!--代码分割线-->
 				<div class="tips">
-					<premium>
+					<zanzhu>
 						- 赞助专享 -
-					</premium>
+					</zanzhu>
 					<h4 class="bordered-box">
 						<p></p>
 						Android破解软件 | Windows破解软件 | Windows密钥
