--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
 	<script src="js/Sitetime.js"></script><!-- 运行时间 -->
 	<script src="js/toggleText.js"></script><!-- 3秒切换标题文字 -->
+	<script src="js/colourful-text.js"></script><!-- 3秒切换标题文字 -->
 	<script src="js/sakura-less.js"></script><!-- 花瓣飘落效果 -->
 </head>
 
@@ -41,7 +42,7 @@
 					#Smali
 				</biaoqian>
 				<p>
-					<colourful-text>世味年来薄似纱，谁令骑马客京华？</colourful-text>
+					<colourful-text id="colourful-text"></colourful-text>
 					<br></br>
 					<canvas id="canvas"></canvas>
 					<script src="js/clock.js"></script><!-- 引入时钟脚本文件 -->
