--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
 	<script src="js/Sitetime.js"></script><!-- 运行时间 -->
 	<script src="js/toggleText.js"></script><!-- 3秒切换标题文字 -->
-	<script src="js/colourful-text.js"></script><!-- 3秒切换标题文字 -->
+	<script src="js/colourful-text.js"></script><!-- 8小时彩色文字切换 -->
 	<script src="js/sakura-less.js"></script><!-- 花瓣飘落效果 -->
 </head>
 
@@ -21,7 +21,9 @@
 			<div class="title">
 				<h2 id="toggleText"></h2>
 				<script>
+					// 定义一个包含多个标签的数组
 					const tags = ["#Android", "#HTML", "#CSS", "#JavaScript", "#website", "#Java", "#Smali"];
+					// 遍历数组中的每个标签，并将其写入文档中
 					tags.forEach(tag => {
 						document.write(`<biaoqian>${tag}</biaoqian>`);
 					});
@@ -113,7 +115,6 @@
 						- 赞助专享 -
 					</zanzhu>
 					<h4 class="bordered-box">
-						<p></p>
 						Android破解软件 | Windows破解软件 | Windows密钥
 						<p></p>
 						Office密钥 | 软件注册码 | 网课教程学习课程
