--- a/index.html
+++ b/index.html
@@ -38,25 +38,22 @@
 				</p>
 				<!--代码分割线-->
 				<div class="card">
-					<div class="card__item">
-						<div class="card__title">软件</div> <!-- 显示卡片标题，内容为“软件” -->
-						<div class="card__txt">Software</div> <!-- 显示卡片的文本内容，内容为“Software” -->
-					</div>
-					<!--代码分割线-->
-					<div class="card__item">
-						<div class="card__title">教程</div> <!-- 显示卡片标题 -->
-						<div class="card__txt">Study</div> <!-- 显示卡片文本内容 -->
-					</div>
-					<!--代码分割线-->
-					<div class="card__item">
-						<div class="card__title">密钥</div> <!-- 显示密钥标题 -->
-						<div class="card__txt">Serial-Key</div> <!-- 显示序列号文本 -->
-					</div>
-					<!--代码分割线-->
-					<div class="card__item">
-						<div class="card__title">技术</div> <!-- 显示卡片标题 -->
-						<div class="card__txt">Technology</div> <!-- 显示卡片文本 -->
-					</div>
+					<script>
+						const items = [
+							{ title: "软件", txt: "Software" },
+							{ title: "教程", txt: "Study" },
+							{ title: "密钥", txt: "Serial-Key" },
+							{ title: "技术", txt: "Technology" }
+						];
+						items.forEach(item => {
+							document.write(`
+			                <div class="card__item">
+			                    <div class="card__title">${item.title}</div>
+			                    <div class="card__txt">${item.txt}</div>
+			                </div>
+			            `);
+						});
+					</script>
 				</div>
 				<!--代码分割线-->
 			</div>
