--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<p></p>
 						Office密钥 | 软件注册码 | 网课教程学习课程
 						<p></p>
-						📢 —— 赞助已经关闭，优质资源赞助者优享！
+						<a style="color: #0099fa;">🎉—— 赞助已经关闭，优质资源赞助者优享！</a>
 					</h4>
 					<p></p>
 				</div>
@@ -124,7 +124,8 @@
 			</div>
 		</div>
 		<!--代码分割线-->
-		<footer>友情提示：为了防止失联，建议收藏保存。
+		<footer>
+			<b>友情提示：为了防止失联，建议收藏保存。</b>
 			<p></p>
 			<b></br>
 				<span id="sitetime"></span> <!-- 运行时间 -->
