--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<!-- 链接到TG联系 -->
 						<li><a href="https://qm.qq.com/q/5DOx47lSYo" target="_blank" class="hover-zoom">QQ联系</a></li>
 						<!-- 链接到QQ联系 -->
-						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">Email联系</a></li>
+						<li><a href="mailto:3295532395@qq.com" target="_blank" class="hover-zoom">Email反馈</a></li>
 						<!-- 链接到电子邮件联系 -->
 					</ul>
 				</div>
