--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<h2 id="toggleText"></h2>
 				<script>
 					// 定义一个包含多个标签的数组
-					const tags = ["#Android", "#HTML", "#CSS", "#JavaScript", "#Website", "#Java", "#Smali", "Wordpress"];
+					const tags = ["#HTML", "#CSS", "#JavaScript", "#Website", "Wordpress", "#Java", "#Smali", "#Android"];
 					// 遍历数组中的每个标签，并将其写入文档中
 					tags.forEach(tag => {
 						document.write(`<biaoqian>${tag}</biaoqian>`);
