--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
 	<meta charset="utf-8"> <!-- 设置字符编码为UTF-8 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- 设置视口适应设备宽度 -->
+	<meta name="description" content="bin1site·导航"> <!-- 设置页面描述 -->
+	<meta name="keywords" content="bin1site,导航,bin1,网站导航,网站导航网址,网站导航网址导航,网站导航网址导航网址"> <!-- 设置页面关键词 -->
+	<meta name="author" content="bin1"> <!-- 设置作者 -->
+	<meta name="robots" content="index,follow"> <!-- 设置搜索引擎抓取 -->
+	<meta name="googlebot" content="index,follow"> <!-- 设置谷歌搜索引擎抓取 -->
+	<meta name="bingbot" content="index,follow"> <!-- 设置必应搜索引擎抓取 -->
+	<meta name="slurp" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
+	<meta name="yandex" content="index,follow"> <!-- 设置雅虎搜索引擎抓取 -->
+	<meta name="baidu" content="index,follow"> <!-- 设置百度搜索引擎抓取 -->
+	<meta name="sogou" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
 	<title>🪪bin1site·导航</title> <!-- 设置页面标题 -->
 	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
 	<script src="js/Sitetime.js"></script><!-- 运行时间 -->
