--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				</script>
 				<p>
 					<colourful-text id="colourful-text"></colourful-text>
+					<!-- 定义一个包含8小时彩色文字的元素 -->
 					<br></br>
 					<canvas id="canvas"></canvas>
 					<script src="js/clock.js"></script><!-- 引入时钟脚本文件 -->
