--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					// 遍历数组中的每个标签，并将其写入文档中
 					tags.forEach(tag => {
 						document.write(`<biaoqian>${tag}</biaoqian>`);
+						// 定义一个包含多个标签的元素
 					});
 				</script>
 				<p>
@@ -56,6 +57,7 @@
 							{ title: "教程", txt: "Study" },
 							{ title: "密钥", txt: "Serial-Key" },
 							{ title: "技术", txt: "Technology" }
+							// 添加更多对象
 						];
 						// 遍历数组中的每个对象，并使用 document.write 方法生成 HTML 内容
 						items.forEach(item => {
@@ -65,6 +67,7 @@
                        <div class="card__txt">${item.txt}</div></div>
 				   		`);
 						});
+						// 定义一个包含多个标签的元素
 					</script>
 				</div>
 				<!--代码分割线-->
